public/css/style.css
* {
  box-sizing: border-box;
  font-family: 'Helvetica', sans-serif;
}

body {
  background-color: #A7ADC6;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

p {
  word-wrap: break-word;
}

#hamburger {
  color: black;
}

#appName {
  margin-top: 1%;
  margin-left: 33%;
  color: black;
  font-family: 'Lobster', cursive;
}

#appNameLogin {
  color: black;
  font-family: 'Lobster', cursive;
  font-size: 48px;
}

#login {
  font-family: 'Lobster', cursive;
}

#slide-out {
  background-color: #A7ADC6;
}

#footName {
  font-family: 'Lobster', cursive;
}

#foot {
  background-color: #5F4B66;
}

#footLogin {
  background-color: #5F4B66;
  margin-top: 0%;
}

#nav {
  background-color: #5F4B66;
  width: 100%;
  padding-bottom: none;
  padding-top: none;
  margin-top: none;
  margin-bottom: none;
}

#navLogin {
  background-color: #5F4B66;
  padding-bottom: 7%;
}

#navHead {
  padding-bottom: 35%;
}

#chatBox {
  margin-top: 2.5%;
  margin-bottom: none;
  padding-left: none;
  padding-right: none;
  position: relative;
}

#chatView {
  background-color: #BAABBD;
  box-shadow: 4px 4px 4px;
  border: 4px black;
  border-style: inset;
  border-radius: 5px;
  margin-left: 15%;
  margin-right: 15%;
  margin-top: 0%;
  height: 1%;
  overflow: hidden;
  position:relative;
}

#msgBox {
  background-color: #BAABBD;
  box-shadow: 4px 4px 4px;
  border: 4px black;
  border-style: inset;
  border-radius: 5px;
  margin-left: 15%;
  margin-right: 15%;
  margin-top: 2%;
  height: 150px;
  overflow: scroll;
  position:relative;
}

#chatRow {
  margin-bottom:0%;
}

#sendButton {
  background-color: #2C1320;
  padding-top: 2%;
  padding-bottom: 5%;
}

#chatPH {
  margin-bottom: 0%;
  border-color: black;
}

#song {
  width: 60%;
  height: 400px;
  margin-left: 20%;
  margin-right: 20%;
  margin-top: 5%;
}

#formdiv {
  height: 175px;
  box-shadow: 2px 2px 2px;
  border: 8px solid;
  border-color: #5F4B66;
  background-color: #A7ADC6;
  border-radius: 3%;
}

.input-field label {
  color: black;
}

#needAcc {
  color: black;
  background-color: #6381D1;
}

#loginButton {
  background-color: #5F4B66;
  color: #A7ADC6;
}

.divider {
  background-color: black;
}

.input-field input[type=text]:focus + label {
  color: #black;
}

.input-field input[type=text]:focus {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}

.input-field input[type=text].valid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
 }

.input-field input[type=text].invalid {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}

.input-field .prefix.active {
  color: black;
}

.icon_prefix.active {
  color: black;
}

#passwordLogin {
  border-color: black;
}

#usernameLogin {
  border-color: black;
}

.material-icons prefix active {
  color: black;
}

#signUp {
  background-color: #A7ADC6;
  border-radius: 0%;
  border: 0.5px solid;
  border-color: #5F4B66;
  padding-left: 5% !important;
}

#modal1 {
  height:285px;
  box-shadow: 2px 2px 2px;
  border: 8px solid;
  border-color: #5F4B66;
  background-color: #A7ADC6;
  border-radius: 3%;
}

#rowSignUp {
  margin-top: 0.5%;
}

#signUpButton {
  background-color: #5F4B66;
  color: #A7ADC6;
}

#navRow {
  margin-bottom: 0%;
}

header {
  background: url('http://az616578.vo.msecnd.net/files/2015/12/20/6358623850982099701625905936_concert%20crowd.jpg');
  background-size: cover;
  flex-direction:column;
  height: 550px;
  justify-content: center;
}

